apps/base/paperless/deployment-valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
        - name: valkey
          image: docker.io/valkey/valkey:9-alpine
          ports:
            - containerPort: 6379
              name: valkey-port
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
          - mountPath: /data
            name: valkey-data
      volumes:
        - name: valkey-data
          persistentVolumeClaim:
            claimName: valkey-data
