apps/base/paperless/service-valkey.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: valkey
  name: valkey
spec:
  ports:
    - port: 6379
      targetPort: valkey-port
  selector:
    app: valkey
  type: ClusterIP
