apps/base/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
spec:
  ports:
    - port: 8000
  selector:
    app: paperless
  type: ClusterIP
